refactor css structure

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,19 +1,14 @@
 @charset 'utf-8';
-//CSS reset
+
+@import "./sass/helpers/variables";
+@import "./sass/base/typography";
+@import "./sass/components/card";
+
 a {
   text-decoration: none;
 }
 
-//12 column grid
-//typography
-//components
-// Variables
-//Variables
 $screenWidth: 100vw;
-// Colours: according to styleguide no colors in names
-$pinRed: #e60023;
-$mediumGrey: #8e8e8e;
-$backgroundColor: #f8f8f8;
 
 /* Layout*************************************************/
 
@@ -38,20 +33,7 @@ $base-gutter-width: 0.1em;
   box-sizing: border-box;
 }
 //fonts
-h1 {
-  font-size: 2.6rem;
-}
 
-p {
-  font-size: 1.4rem;
-}
-.material-icons {
-  font-size: 2rem !important;
-  font-weight: bold;
-}
-// Mixins
-@mixin name {
-}
 //padding and margins
 .ma {
   margin: 5px;
@@ -152,12 +134,6 @@ p {
   height: 34px;
 }
 
-.card {
-  width: 300px;
-  height: 400px;
-  margin: 2px;
-  background-color: $pinRed;
-}
 //inspiration
 .App-header {
   font-size: calc(10px + 2vmin);
