deleted app.scss and index.scss

--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -2,3 +2,7 @@
 $pinRed: #e60023;
 $mediumGrey: #8e8e8e;
 $backgroundColor: #f8f8f8;
+
+//not used atm
+$base-gutter-width: 0.1em;
+$screenWidth: 100vw;
