--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,5 @@
 @import "./sass/helpers/variables";
+@import "./sass/helpers/mixins";
 
 @import "./sass/base/reset";
 @import "./sass/base/typography";
