--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,6 +1,87 @@
-.card {
+.card-wrapper {
   width: 300px;
-  height: 400px;
+  height: auto;
   margin: 2px;
-  background-color: $pinRed;
+  cursor: zoom-in;
+
+  &:hover {
+    background-color: #f1f1f1;
+    border-radius: 6px;
+  }
+  &:hover .card-menu {
+    opacity: 1;
+  }
+}
+.card {
+  padding: 6px;
+  img {
+    width: 100%;
+    border-radius: 6px;
+    opacity: 1;
+    transition: 0.5s ease;
+    backface-visibility: hidden;
+  }
+}
+.input-combo-field {
+  height: 40px;
+  width: 100%;
+  display: flex;
+  border-radius: 6px;
+  .btn {
+    background-color: $pinRed;
+
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    padding: 10px;
+    border-radius: 0 6px 6px 0;
+  }
+  p {
+    color: #fff;
+    font-weight: 700;
+    font-size: 0.8rem;
+  }
+}
+.input-combo {
+  background-color: scale-color($backgroundColor, $lightness: -10%);
+  border: none;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 6px 0 0 6px;
+  padding: 6px;
+}
+
+.card-info {
+  box-sizing: border-box;
+
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  h1 {
+    font-size: 0.9rem;
+    font-weight: 700;
+    color: #333;
+  }
+  // overriding prvious style
+  .nav-link {
+    padding: 6px;
+  }
+  .a {
+    @include size(22px, 22px);
+    color: $mediumGrey;
+
+    cursor: pointer;
+  }
+
+  .material-icons {
+    font-size: 1rem !important;
+    color: $mediumGrey;
+  }
+}
+.card-menu {
+  transition: 0.5s ease;
+  opacity: 0;
 }
