--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,6 +1,34 @@
+.grid {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 10px;
+  grid-template-rows: auto;
+  @include respond-to("xsmall") {
+    border: 2px solid rgb(192, 235, 243);
+  }
+  @include respond-to("small") {
+    border: 2px solid pink;
+  }
+  @include respond-to("medium") {
+    border: 2px solid rgb(180, 66, 66);
+  }
+}
 .container {
+  padding-top: 100px;
+  grid-column: 2/10;
   display: flex;
   flex-wrap: wrap;
   width: 80%;
   margin: 0 auto;
+  @include respond-to("xsmall") {
+    width: 100%;
+    grid-column: 1/13;
+  }
+  @include respond-to("small") {
+    border: 2px solid green;
+    grid-column: 1/13;
+  }
+  @include respond-to("medium") {
+    grid-column: 1/13;
+  }
 }
