--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,6 +14,7 @@
   height: 34px;
 }
 .header-container {
+  grid-column: 1/13;
   padding: 0 16px;
   height: 40px;
   // flexbox
@@ -29,7 +30,6 @@
   margin-top: 0;
   background-color: $backgroundColor;
   padding: 12px 12px;
-
   width: 100%;
   color: $mediumGrey;
   box-shadow: 0px 0px 1px #9e9e9e;
@@ -47,5 +47,10 @@
     border: none;
     font-weight: bold;
     font-size: 1rem;
+  }
+  .vl {
+    @include size(22px, 30px);
+    margin-left: 16px;
+    border-left: 2px solid #efefef;
   }
 }
