--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -11,6 +11,10 @@
   &:hover .card-menu {
     opacity: 1;
   }
+  &:hover .overlay {
+    display: block;
+    background: rgba(0, 0, 0, 0.3);
+  }
 }
 .card {
   padding: 6px;
@@ -82,6 +86,18 @@
   }
 }
 .card-menu {
+  position: absolute;
+  left: 0;
+  top: 0;
   transition: 0.5s ease;
   opacity: 0;
+}
+.overlay {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  transition: background 0.5s ease;
 }
