--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,5 +1,11 @@
+//todo:combobox
+//TODO: combobox hovereffect
+//todo:hover links effect
+//todo:linkname shirtener mixin
 .card-wrapper {
-  width: 300px;
+  position: relative;
+  box-sizing: border-box;
+  width: 250px;
   height: auto;
   margin: 2px;
   cursor: zoom-in;
@@ -11,6 +17,7 @@
   &:hover .card-menu {
     opacity: 1;
   }
+
   &:hover .overlay {
     display: block;
     background: rgba(0, 0, 0, 0.3);
@@ -21,14 +28,24 @@
   img {
     width: 100%;
     border-radius: 6px;
-    opacity: 1;
-    transition: 0.5s ease;
-    backface-visibility: hidden;
   }
 }
-.input-combo-field {
-  height: 40px;
+.img-container {
+  position: relative;
   width: 100%;
+  opacity: 1;
+  transition: 0.5s ease;
+  backface-visibility: hidden;
+}
+.input-combo-field {
+  /*  position: absolute;
+  top: 10px;
+  left: 10px; */
+  margin: 10px;
+
+  width: 65%;
+  height: 40px;
+  // width: 65%;
   display: flex;
   border-radius: 6px;
   .btn {
@@ -54,6 +71,7 @@
   font-size: 1rem;
   border-radius: 6px 0 0 6px;
   padding: 6px;
+  width: 100%;
 }
 
 .card-info {
@@ -87,17 +105,40 @@
 }
 .card-menu {
   position: absolute;
+  display: flex;
+  flex-direction: column;
+
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
   left: 0;
   top: 0;
   transition: 0.5s ease;
   opacity: 0;
 }
 .overlay {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0);
   transition: background 0.5s ease;
+  border-radius: 6px;
+}
+.card-links {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  a {
+    color: #fff;
+    font-weight: 700;
+  }
+  a &:hover {
+    background-color: #333;
+  }
+}
+.link-flex {
+  display: flex;
+  align-items: center;
 }
