--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,3 +1,5 @@
+//TODO: masonry
+//TODO:center grid
 .grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -18,7 +20,7 @@
   grid-column: 2/10;
   display: flex;
   flex-wrap: wrap;
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
   @include respond-to("xsmall") {
     width: 100%;
